<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".SocialActivity"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            style="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:elevation="4dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/image_vk"
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:srcCompat="@drawable/vk_logo"/>

            <TextView
                android:id="@+id/text_vk"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/poiret_one"
                android:gravity="center_vertical"
                android:text="@string/vk"
                android:textSize="17sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/image_inst"
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:srcCompat="@drawable/instagram_logo"/>

            <TextView
                android:id="@+id/text_inst"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/poiret_one"
                android:gravity="center_vertical"
                android:text="@string/inst"
                android:textSize="17sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/image_fb"
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:srcCompat="@drawable/facebook_logo"/>

            <TextView
                android:id="@+id/text_fb"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/poiret_one"
                android:gravity="center_vertical"
                android:text="@string/fb"
                android:textSize="17sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/image_yandex"
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:srcCompat="@drawable/yandex_logo"/>

            <TextView
                android:id="@+id/text_yandex"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/poiret_one"
                android:gravity="center_vertical"
                android:text="@string/yandex"
                android:textSize="17sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/image_whatsApp"
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:srcCompat="@drawable/whatsapp_logo"/>

            <TextView
                android:id="@+id/text_whatsApp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/poiret_one"
                android:gravity="center_vertical"
                android:textSize="17sp"
                android:textStyle="bold"/>
        </LinearLayout>

    </LinearLayout>


    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:id="@+id/nav_view"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_menu"/>

</androidx.drawerlayout.widget.DrawerLayout>